--- a/app/internal/transport/http/ui/html/home.html
+++ b/app/internal/transport/http/ui/html/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+<div class="loader visible"></div>
 <header>
     <img src="../static/img/logo.png" alt="Chord Drawer" class="logo" width="150">
 </header>
